--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,9 @@
   margin: 20px;
 }
 
+h1 {
+  margin: 20px 0;
+}
 
 ul {
   clear: both;
@@ -27,6 +30,7 @@ li {
 
 img {
   width: 100%;
+  object-fit: cover;
 }
 
 .mainImageWrapper {
@@ -70,7 +74,62 @@ img {
   float: left;
 }
 
+@media screen and (min-width: 600px) {
 
+  ul {
+    width: 60%;
+    float: right;
+    clear: none;
+    margin: 30px 0;
+  }
+
+  h1 {
+    width: 40%;
+    float: left;
+  }
+
+  .mainText {
+    float: left;
+    width: 60%;
+    padding: 20px;
+  }
+
+  .mainImageWrapper {
+    float: right;
+    width: 40%;
+    height: 36vw;
+    padding: 20px;
+  }
+
+  .box {
+    float: left;
+    width: 30%;
+    /*margin-right: 2%*/
+  }
+
+  .box:first-of-type {
+    margin-right: 5%;
+  }
+
+  .box:last-of-type {
+    margin-left: 5%;
+  }
+
+  .column2, .column3 {
+    float: left;
+    width: 50%;
+    height: 50vh;
+  }
+
+  .box3, .box2 {
+    height: 30%;
+    padding: 10px;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+
+}
 
 
 .clearfix:before,
